feat: migrate customer-service to Java 21